--- a/package.json
+++ b/package.json
@@ -1,42 +1,66 @@
 {
-  "name": "beetlebk",
-  "version": "1.0.0",
-  "description": "Beetle Back-End",
-  "main": "app.js",
+  "name": "express-es6-starter",
+  "version": "0.1.0",
+  "description": "Seed project for easily getting started with express for es6",
   "scripts": {
-    "dev": "nodemon -w src --exec \"babel-node src --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
-    "start": "node dist",
-    "prestart": "npm run -s build",
-    "test": "eslint src"
+    "start": "nodemon ./server.js --exec babel-node",
+    "build": "babel . -d dist --presets es2015,stage-2 --ignore spec.js,node_modules",
+    "serve": "node dist/server.js",
+    "start_babel": "babel-node ./server.js --preset=babel-preset-es2015",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Chittipobng014/BeetleBK.git"
+    "url": "git+https://github.com/tomyitav/express-es6-starter.git"
   },
-  "author": "Chittipong",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Chittipobng014/BeetleBK/issues"
-  },
-  "homepage": "https://github.com/Chittipobng014/BeetleBK#readme",
+  "keywords": [
+    "Node.js",
+    "Javascript",
+    "Express"
+  ],
+  "author": "Tom Yitav <tomyitav@gmail.com>",
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http": "0.0.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "pg-promise": "^6.5.1"
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.0",
+    "express": "4.14.0",
+    "lodash": "^4.15.0",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.8.2",
+    "winston": "^2.3.1",
+    "winston-daily-rotate-file": "^1.4.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-core": "6.26.3",
-    "nodemon": "^1.18.4"
+    "babel-cli": "6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-inline-import": "^2.0.1",
+    "babel-plugin-transform-async-to-module-method": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-react": "^6.4.1",
+    "nodemon": "^1.9.1"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "extends": [
+      "airbnb/base",
+      "plugin:import/errors"
+    ],
+    "rules": {
+      "no-use-before-define": 0,
+      "arrow-body-style": 0,
+      "dot-notation": 0,
+      "no-console": 0
+    },
+    "env": {
+      "mocha": true
+    }
   }
 }
