--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-es6-starter",
+  "name": "Beetle-Backend",
   "version": "0.1.0",
-  "description": "Seed project for easily getting started with express for es6",
+  "description": "Beetle-Backend",
   "scripts": {
     "dev": "nodemon ./server.js --exec babel-node",
     "start": "babel . -d dist --presets es2015,stage-2 --ignore spec.js,node_modules && node dist/server.js",
@@ -15,12 +15,8 @@
     "type": "git",
     "url": "git+https://github.com/tomyitav/express-es6-starter.git"
   },
-  "keywords": [
-    "Node.js",
-    "Javascript",
-    "Express"
-  ],
-  "author": "Tom Yitav <tomyitav@gmail.com>",
+  "keywords": [],
+  "author": "Beetle-Dev",
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
@@ -32,7 +28,7 @@
     "winston-daily-rotate-file": "^1.4.6"
   },
   "devDependencies": {
-    "babel-cli": "6.16.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
     "babel-plugin-inline-import": "^2.0.1",
