--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomyitav/express-es6-starter.git"
+    "url": "https://github.com/Chittipobng014/BeetleBK"
   },
   "keywords": [],
   "author": "Beetle-Dev",
