--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "keywords": [],
   "author": "Beetle-Dev",
   "dependencies": {
+    "bluebird": "^3.5.2",
     "body-parser": "^1.15.2",
     "cors": "^2.8.0",
     "express": "4.14.0",
     "lodash": "^4.15.0",
     "mongoose": "^4.8.6",
     "morgan": "^1.8.2",
+    "pg-promise": "^8.5.1",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
